# LeadGen

./: .env.example  .gitignore  Agents.md  PROJECT_CONTEXT.md  Phases.md  README.md  vercel.json
services/api/: Agents.md  README.md  pyproject.toml  railpack.json  railway.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0bfd962c64c3_initial_schema.py  a1b2c3d4e5f6_add_user_settings.py  b2c3d4e5f6a7_add_search_results.py  c3d4e5f6a7b8_add_enrichment_message.py  d4e5f6a7b8c9_add_reply_notes.py  e5f6a7b8c9d0_add_provider_credentials.py
services/api/app/: __init__.py  main.py
services/api/app/api/: deps.py
services/api/app/core/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  logging.py  security.py
services/api/app/models/: __init__.py  audit_log.py  campaign.py  company.py  email_contact.py  email_message.py  enums.py  lead.py  mixins.py  niche.py  provider_credential.py  reply.py  search_query.py  suppression.py  user.py  user_settings.py
services/api/app/schemas/: __init__.py  auth.py  campaign.py  common.py  email.py  (+11 more)
services/api/scripts/: seed.py
services/api/tests/: __init__.py  conftest.py  test_auth.py  test_compliance_units.py  test_cors_config.py  test_csv_import_units.py  test_email_generation_units.py  test_enrichment_units.py  test_phase10.py  test_phase12.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_provider_settings.py  test_scoring_search_units.py  test_seed.py  test_sending_gate_units.py  test_sending_units.py
(+158 files in other folders)
