[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadsgen-api"
version = "0.1.0"
description = "LeadsGen B2B lead-intelligence and outreach API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.3",
    "tldextract>=5.1.2",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.17",
    "python-dotenv>=1.0.1",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.10",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
